--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -10,3 +10,6 @@ server.port=8082
 #===============EUREKA CONFIGURATION===============================#
 eureka.client.service-url.defaultZone=http://user:password@localhost:8761/eureka/
 spring.application.name=inventory-service
+
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
