--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://user:password@localhost:8761/eureka/
 #eureka.client.service-url.default-zone=http://user:password@localhost:8761/eureka/
 spring.application.name=product-service
+
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
