--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>inventory-service</module>
         <module>discovery-server</module>
         <module>api-gateway</module>
+        <module>notifications-service</module>
     </modules>
 
     <properties>
@@ -52,7 +53,10 @@
                 <groupId>org.springframework.kafka</groupId>
                 <artifactId>spring-kafka</artifactId>
             </dependency>
+
+
         </dependencies>
+
     </dependencyManagement>
 
     <build>
